Atualização do cargo pretendido

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Neymar Ricardo Santos da Silva</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Blockchain Developer</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>FullStack and Blockchain Developer</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Ilhéus-BA, Brazil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>neymar.ricardo2@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+55 73 98837-7177</p>
