--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>TODO</p>
+            <p>Blockchain and Cryptocurrencies's loved. I'm student of programming at platforms Udemy and DIO.</p>
+            <p>I'm learn actualy PHP, Solidity, Javascript, React, NodeJS, Python and others tecnologies to increase each more my abilities to programming.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
