--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
               </div>
               <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%">Intermediate</div>
               </div>
               <p>Franch</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%">Intermediate</div>
               </div>
               <br>
             </div>
