--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Manager Assitent at Federal University of Southern Bahia </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014-12-03 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <p>development of medium complexity tasks for public management as an assistant and various contributions such as participation in committees and commissions (ethics, positive discrimination and others).</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>University Technician at State University of Santa Cruz</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012-11-28 - 2014-12-01</h6>
+              <p>Web application development in PHP, Mysql, HTML and CSS for system of abstract submissiom to University's Scientific Event</p>
               <hr>
             </div>
-            <div class="w3-container">
+          /*<div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
               <p>TODO</p><br>
-            </div>
+            </div>*/
           </div>
   
           <div class="w3-container w3-card w3-white">
