--- a/index.html
+++ b/index.html
@@ -111,22 +111,18 @@
             <h2 class="w3-text-grey w3-padding-16"><i
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>DIO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
+              <p>One of largest IT open education platforms in latim America, with almost 1 million users. DIO has partnerships with some of the most innovative companies in the world, enabling global networking.
+                 In this context, I completed the following DIO educational expiriencies:
+                 <ul>
+                  <li><a href="https://www.dio.me/certificate/2B5284EB/share">Introdução ao Desenvolvimento Moderno de Software</a></li>
+                  <li><a href="https://hermes.digitalinnovation.one/certificates/5B4857CE.pdf">Introdução ao Git e ao GitHub</a></li>
+                  <li><a href="https://www.dio.me/certificate/A7227E19">Introdução à Programação e ao Pensamento Computacional</a></li>
+                 </ul>              
+              </p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
-              <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
-            </div>
+            </div>       
           </div>
   
           <!-- End Right Column -->
